Buggy Carousel. Mobile Support broken. Title off center

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -11,6 +11,7 @@ body {
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
+
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
   position: absolute;
@@ -37,19 +38,41 @@ body {
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
+
+.blackbox {
+	background-color: black;
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	z-index: -1;
+	opacity: .7;
+}
+
+.blackboxcontent {
+	z-index: 10;
+	color: white;
+	margin-bottom: 10px;
+}
+
 /* Carousel base class */
 .carousel {
   height: 500px;
   margin-bottom: 60px;
 }
 /* Since positioning the image, we need to help out the caption */
+
 .carousel-caption {
-  z-index: 10;
+	height: 100%;
+	position: absolute;
+	top: 20%;
+	left: 20%;
 }
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
+  height: 300px;
   background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -57,7 +80,7 @@ body {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 300px;
 }
 
 
